--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 							<div>
 								<section>
 									<h2>Get in touch</h2>
-									<form method="post" action="process-form.php">
+									<form action="https://formsubmit.co/matiasaratano@gmail.com" method="POST">
 										<div class="fields">
 											<div class="field half">
-												<input type="text" name="name" id="name" placeholder="Name" />
+												<input type="text" name="name" id="name" placeholder="Name" required />
 											</div>
 											<div class="field half">
-												<input type="text" name="email" id="email" placeholder="Email" />
+												<input type="email" name="email" id="email" placeholder="Email" required />
 											</div>
 											<div class="field">
 												<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
@@ -134,6 +134,7 @@
 											<li><input type="reset" value="Reset" /></li>
 										</ul>
 									</form>
+				
 								</section>
 							</div>
 						</div>
