--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@
 											<div class="field half">
 												<input type="email" name="email" id="email" placeholder="Email" required />
 											</div>
+											<div class="field half">
+												<input type="number" name="persons" id="persons" placeholder="Cantidad de Personas" required />
+											</div>
+											<div class="field half">
+												<h3>Conoce el lugar</h3>
+												<input type="checkbox" name="conoce" id="conoce"  />
+											</div>
+											
 											<div class="field">
 												<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
 											</div>
