--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 									<form action="https://formsubmit.co/matiasaratano@gmail.com" method="POST">
 										<div class="fields">
 											<div class="field half">
-												<input type="text" name="name" id="name" placeholder="Nombre" required />
+												<input type="text" name="nombre" id="name" placeholder="Nombre" required />
 											</div>
 											<div class="field half">
 												<input type="email" name="email" id="email" placeholder="Email" required />
@@ -126,17 +126,17 @@
 										
 											<div class="field half">
 												<h6>Fecha de llegada:</h6>
-												<input type="date" id="startdate" name="trip-start"
+												<input type="date" id="startdate" name="fecha llegada"
        												value="2023-07-22"
        												min="2023-01-01" max="2025-12-31">
 											</div>
 											<div class="field half">
 												<h6>Cantidad de noches: </h6>
-												<input type="number" name="number" id="startdate" placeholder="0" required />
+												<input type="number" name="cantidadNoches" id="startdate" placeholder="0" required />
 											</div>
 											<div class="field">
 
-												<textarea name="message" id="message" rows="4" placeholder="Mensaje"></textarea>
+												<textarea name="mensaje" id="message" rows="4" placeholder="Mensaje"></textarea>
 											</div>
 										</div>
 										<ul class="actions">
