--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Multiverse by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Multiverse by HTML5 UP</title>
+		<title>En Esta Tierra</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +15,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
+						<h1><a href="index.html"><strong>EN ESTA TIERRA</strong> by HTML5 UP/MA Design</a></h1>
 						<nav>
 							<ul>
-								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
+								<li><a href="#footer" class="icon solid fa-info-circle">Contacto</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -103,7 +99,7 @@
 									<h2>Seguinos en nuestras redes ...</h2>
 									<ul class="icons">
 										
-										<li><a href="https://www.facebook.com/enestatierragesell" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.facebook.com/enestatierragesell" class="icon brands fa-facebook-f" id="facebook"><span class="label">Facebook</span></a></li>
 										<li><a href="https://www.instagram.com/en_esta_tierra/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										
 									</ul>
